Fixed mobile nav spacing

--- a/contact.css
+++ b/contact.css
@@ -180,7 +180,7 @@ a {
     }
     .c {
         flex-grow: 20;
-        padding-right: 10px;
+        padding-right: 15px;
     }
     .contact {
         font-size: 20pt;
