--- a/services.css
+++ b/services.css
@@ -185,7 +185,7 @@ a {
     }
     .c {
         flex-grow: 20;
-        padding-right: 10px;
+        padding-right: 15px;
     }
 }
 
