--- a/services/services.css
+++ b/services/services.css
@@ -192,7 +192,7 @@ a {
     }
     .c {
         flex-grow: 20;
-        padding-right: 10px;
+        padding-right: 15px;
     }
     .price {
         font-size: 20pt;
