--- a/single.css
+++ b/single.css
@@ -219,7 +219,7 @@ a {
     }
     .c {
         flex-grow: 20;
-        padding-right: 10px;
+        padding-right: 15px;
     }
 }
 
